Bug #40483
Pool settings aren't populated to OSD after restart.
Status:
Resolved
Priority:
Urgent
Assignee:
-
Category:
-
Target version:
-
% Done:
0%
Source:
Tags:
Backport:
nautilus, mimic, luminous
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Component(RADOS):
Pull request ID:
Crash signature (v1):
Crash signature (v2):
Description
In vstart-ed cluster kill osd then restart using ceph-osd -i N
Restarted OSD doesn't observe pool settings (e.g. bluestore_compression_mode) until one invokes "ceph osd pool set" command. Target pool for the command may be different from the pool we want settings for.
Reproduced this in the lab against both master and mimic.
See #40480 for an additional example.
Related issues
History
#1 Updated by Greg Farnum over 3 years ago
- Project changed from Ceph to RADOS
#2 Updated by Sage Weil over 3 years ago
- Status changed from New to 12
- Priority changed from Normal to Urgent
- Backport set to nautilus, mimic, luminous
#3 Updated by Sage Weil over 3 years ago
- Status changed from 12 to Fix Under Review
#4 Updated by Sage Weil over 3 years ago
- Status changed from Fix Under Review to Pending Backport
#5 Updated by Nathan Cutler over 3 years ago
- Copied to Backport #40889: luminous: Pool settings aren't populated to OSD after restart. added
#6 Updated by Nathan Cutler over 3 years ago
- Copied to Backport #40890: mimic: Pool settings aren't populated to OSD after restart. added
#7 Updated by Nathan Cutler over 3 years ago
- Copied to Backport #40891: nautilus: Pool settings aren't populated to OSD after restart. added
#8 Updated by Nathan Cutler over 3 years ago
- Pull request ID set to 29093
#9 Updated by Nathan Cutler about 2 years ago
- Status changed from Pending Backport to Resolved
While running with --resolve-parent, the script "backport-create-issue" noticed that all backports of this issue are in status "Resolved" or "Rejected".